# anything-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: create-release.yml  create-tag.yml  pr-test-build.yml
benches/: cli_benchmarks.rs
install/: install.sh
src/: lib.rs  main.rs
src/cli/: args.rs  cli.rs  parse.rs
src/commands/: set_base_url.rs  set_header.rs  uninstall.rs  update.rs
src/config/: config.rs  data.rs  loader.rs  saver.rs
src/instructions/: mod.rs
src/schema/: mod.rs
src/utils/: executable.rs  git.rs
tests/: integration_tests.rs
